Bug 206659 - error (message) when calling script method Amarok.Playlist.saveCurrentPlaylist()
Summary: error (message) when calling script method Amarok.Playlist.saveCurrentPlaylist()
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Saved Playlists (show other bugs)
Version: 2.3-GIT
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-07 19:57 UTC by Mathias Panzenböck
Modified: 2009-09-21 21:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mathias Panzenböck 2009-09-07 19:57:41 UTC
Version:           2.2-GIT (using 4.3.00 (KDE 4.3.0), 4.3.0-6.fc11 Fedora)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.29.6-217.2.16.fc11.x86_64

When you call the method from within a script a "Sorry" Dialog pops up containing the message:
Cannot write playlist (/).

However, it returns the (correct) string:
/home/panzi/.kde/share/apps/amarok/current.xspf

And the playlist seems to be saved. It just seems to be a wrong error message.
I use amarok 2.2-GIT version eedca478ee9691d8898fa9d547eb58d9ebb387f2 (Mon Sep 7 15:56:48 2009 +0200).
Comment 1 Bart Cerneels 2009-09-21 21:09:29 UTC
Fixed in v2.1.85-107-g8059ad7. Which will be tagged as 2.2-rc1 tonight.