Get rid of the "Sorry" dialog when saving XSPF playlist.

BUG:206659